...
    fun DivisionActionLeadingField(modifier: Modifier) {
        when {
            showDivisionPlayoffTeamCount -> {
                NumberInputField(
                    modifier = modifier,
                    value = state.divisionEditor.playoffTeamCount?.toString().orEmpty(),
                    label = "Division Playoff Team Count *",
                    enabled = state.divisionEditorReady,
                    onValueChange = { value ->
                        if (!state.divisionEditorReady) {
                            return@NumberInputField
                        }
                        if (value.isEmpty() || value.all { it.isDigit() }) {
...
