...
            addAll(paymentPlanValidationErrors)
        }
        if (!isLeagueScoringValid) {
            addAll(leagueScoringErrors)
        }
        val imageError = when {
            editEvent.imageId.isBlank() -> "Select an image for the event."
            !isColorLoaded -> "Image is still loading."
            else -> null
        }
        if (imageError != null) {
            add(imageError)
        }
...
