...
                        nameTouched = true,
                        error = null,
                    ),
                )
            },
            modifier = Modifier.weight(1f),
            label = "Division Name",
            enabled = state.divisionEditorReady,
        )
    }

    AnimatedVisibility(!editEvent.singleDivision) {
        Column(verticalArrangement = Arrangement.spacedBy(8.dp)) {
...
